# service.0.1.0

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.cpu  Dockerfile.gpu  README.md  build.rs  dockerfile  download_models.sh  test.py
proto/: inference.proto
src/: backend.rs  grpcmain.rs  inference.rs  main.rs  modelsmain.rs  services.rs  tokenize.rs
