[package]
name = "gemma-embedder-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
onnxruntime = "0.0.14"
prost = "0.14.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.225"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

[build-dependencies]
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
